@@ -16,4 +16,6 @@ default
 default
 default
 default
-Total time spent: 0
+1
+2
+Total time spent: 4
